# quicnet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
examples/: chat.rs  shell.rs  webtransport_chat.rs
src/: auth.rs  authorized_peers.rs  client.rs  coordinator.rs  identity.rs  irc.rs  known_hosts.rs  lib.rs  main.rs  manage.rs  peer.rs  pending_peers.rs  server.rs
src/security/: audit.rs  mod.rs  rate_limit.rs
src/transport/: builder.rs  mod.rs  stream.rs  web_compat.rs
