[package]
name = "quicnet"
version = "2.0.0"
edition = "2021"
authors = ["rotko networks"]
license = "MIT OR Apache-2.0"
description = "minimal peer-to-peer network protocol over QUIC"
repository = "https://github.com/rotkonetworks/quicnet"
keywords = ["quic", "p2p", "networking", "ed25519"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "quicnet"
path = "src/lib.rs"

[[bin]]
name = "quicnet"
path = "src/main.rs"

[dependencies]
# core
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "net", "macros"] }

# crypto
ed25519-dalek = "2"
rand = "0.8"

# encoding
base32 = "0.5"
base64 = "0.22"

# certificates
rcgen = "0.13"

# cli
clap = { version = "4", features = ["derive"] }

# filesystem
dirs = "5"

# error handling
anyhow = "1"

[features]
default = []
coordinator = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
