[package]
name = "quicnet"
version = "0.2.1"
edition = "2024"
authors = ["rotko networks"]
license = "MIT OR Apache-2.0"
description = "minimal peer-to-peer network protocol over QUIC"
repository = "https://github.com/rotkonetworks/quicnet"
keywords = ["quic", "p2p", "networking", "ed25519"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "quicnet"
path = "src/lib.rs"

[[bin]]
name = "quicnet"
path = "src/main.rs"

[dependencies]
# core transport & tls
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "net", "macros"] }

# crypto
ed25519-dalek = { version = "2", features = ["pkcs8"] }
rand = "0.8"
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }
rpassword = "7"

# encoding
base64 = "0.22"
bs58 = "0.5"
b256 = "0.4.1"

# certificates / x509
rcgen = "0.14"
x509-parser = "0.18"

# cli
clap = { version = "4", features = ["derive"] }

# filesystem
dirs = "5"

# error handling
anyhow = "1"
parking_lot = "0.12"

# logging
chrono = "0.4"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[example]]
name = "shell"
path = "examples/shell.rs"

[[example]]
name = "chat"
path = "examples/chat.rs"
