[package]
name = "quicnet"
version = "0.2.2"
edition = "2024"
authors = ["rotko networks"]
license = "MIT OR Apache-2.0"
description = "minimal peer-to-peer network protocol over QUIC"
repository = "https://github.com/rotkonetworks/quicnet"
keywords = ["quic", "p2p", "networking", "ed25519"]
categories = ["network-programming", "command-line-utilities"]

[lib]
name = "quicnet"
path = "src/lib.rs"

[[bin]]
name = "quicnet"
path = "src/main.rs"

[dependencies]
# core transport & tls
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "net", "macros"] }

# crypto
ed25519-dalek = { version = "2", features = ["pkcs8"] }
rand = "0.8"
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }
rpassword = "7"

# encoding
base64 = "0.22"
bs58 = "0.5"
b256 = "0.4.1"
hex = "0.4"

# certificates / x509
rcgen = "0.14"
x509-parser = "0.18"

# cli
clap = { version = "4", features = ["derive"] }

# filesystem
dirs = "5"

# error handling
anyhow = "1"
parking_lot = "0.12"

# logging
chrono = "0.4"

# webtransport deps (optional feature)
h3 = { git = "https://github.com/hyperium/h3", rev = "0e54a16", optional = true }
h3-quinn = { git = "https://github.com/hyperium/h3", rev = "0e54a16", features = ["datagram"], optional = true }
h3-webtransport = { git = "https://github.com/hyperium/h3", rev = "0e54a16", optional = true }
h3-datagram = { git = "https://github.com/hyperium/h3", rev = "0e54a16", optional = true }
bytes = { version = "1", optional = true }
http = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }


[features]
default = []
webtransport = ["h3", "h3-quinn", "h3-webtransport", "h3-datagram", "bytes", "http", "sha2", "hex", "time"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[example]]
name = "shell"
path = "examples/shell.rs"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "webtransport_chat"
path = "examples/webtransport_chat.rs"

[dependencies.instant-acme]
version = "0.7"

[dependencies.rustls-pemfile]
version = "2"

[dependencies.time]
version = "0.3"
features = ["formatting", "macros"]
optional = true
